; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_replace_s.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_replace_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SN_env = type { i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @replace_s(%struct.SN_env* %0, i32 %1, i32 %2, i32 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.SN_env*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.SN_env* %0, %struct.SN_env** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %17 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %6
  %21 = call i32* (...) @create_s()
  %22 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %23 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %22, i32 0, i32 2
  store i32* %21, i32** %23, align 8
  %24 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %25 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %24, i32 0, i32 2
  %26 = load i32*, i32** %25, align 8
  %27 = icmp eq i32* %26, null
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  store i32 -1, i32* %7, align 4
  br label %148

29:                                               ; preds = %20
  br label %30

30:                                               ; preds = %29, %6
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %10, align 4
  %33 = load i32, i32* %9, align 4
  %34 = sub nsw i32 %32, %33
  %35 = sub nsw i32 %31, %34
  store i32 %35, i32* %14, align 4
  %36 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %37 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %36, i32 0, i32 2
  %38 = load i32*, i32** %37, align 8
  %39 = call i32 @SIZE(i32* %38)
  store i32 %39, i32* %15, align 4
  %40 = load i32, i32* %14, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %125

42:                                               ; preds = %30
  %43 = load i32, i32* %14, align 4
  %44 = load i32, i32* %15, align 4
  %45 = add nsw i32 %43, %44
  %46 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %47 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %46, i32 0, i32 2
  %48 = load i32*, i32** %47, align 8
  %49 = call i32 @CAPACITY(i32* %48)
  %50 = icmp sgt i32 %45, %49
  br i1 %50, label %51, label %67

51:                                               ; preds = %42
  %52 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %53 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %52, i32 0, i32 2
  %54 = load i32*, i32** %53, align 8
  %55 = load i32, i32* %14, align 4
  %56 = load i32, i32* %15, align 4
  %57 = add nsw i32 %55, %56
  %58 = call i32* @increase_size(i32* %54, i32 %57)
  %59 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %60 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %59, i32 0, i32 2
  store i32* %58, i32** %60, align 8
  %61 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %62 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %61, i32 0, i32 2
  %63 = load i32*, i32** %62, align 8
  %64 = icmp eq i32* %63, null
  br i1 %64, label %65, label %66

65:                                               ; preds = %51
  store i32 -1, i32* %7, align 4
  br label %148

66:                                               ; preds = %51
  br label %67

67:                                               ; preds = %66, %42
  %68 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %69 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %68, i32 0, i32 2
  %70 = load i32*, i32** %69, align 8
  %71 = load i32, i32* %10, align 4
  %72 = sext i32 %71 to i64
  %73 = getelementptr inbounds i32, i32* %70, i64 %72
  %74 = load i32, i32* %14, align 4
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds i32, i32* %73, i64 %75
  %77 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %78 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %77, i32 0, i32 2
  %79 = load i32*, i32** %78, align 8
  %80 = load i32, i32* %10, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i32, i32* %79, i64 %81
  %83 = load i32, i32* %15, align 4
  %84 = load i32, i32* %10, align 4
  %85 = sub nsw i32 %83, %84
  %86 = sext i32 %85 to i64
  %87 = mul i64 %86, 4
  %88 = trunc i64 %87 to i32
  %89 = call i32 @memmove(i32* %76, i32* %82, i32 %88)
  %90 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %91 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %90, i32 0, i32 2
  %92 = load i32*, i32** %91, align 8
  %93 = load i32, i32* %14, align 4
  %94 = load i32, i32* %15, align 4
  %95 = add nsw i32 %93, %94
  %96 = call i32 @SET_SIZE(i32* %92, i32 %95)
  %97 = load i32, i32* %14, align 4
  %98 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %99 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %98, i32 0, i32 0
  %100 = load i32, i32* %99, align 8
  %101 = add nsw i32 %100, %97
  store i32 %101, i32* %99, align 8
  %102 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %103 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %102, i32 0, i32 1
  %104 = load i32, i32* %103, align 4
  %105 = load i32, i32* %10, align 4
  %106 = icmp sge i32 %104, %105
  br i1 %106, label %107, label %113

107:                                              ; preds = %67
  %108 = load i32, i32* %14, align 4
  %109 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %110 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %109, i32 0, i32 1
  %111 = load i32, i32* %110, align 4
  %112 = add nsw i32 %111, %108
  store i32 %112, i32* %110, align 4
  br label %124

113:                                              ; preds = %67
  %114 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %115 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %114, i32 0, i32 1
  %116 = load i32, i32* %115, align 4
  %117 = load i32, i32* %9, align 4
  %118 = icmp sgt i32 %116, %117
  br i1 %118, label %119, label %123

119:                                              ; preds = %113
  %120 = load i32, i32* %9, align 4
  %121 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %122 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %121, i32 0, i32 1
  store i32 %120, i32* %122, align 4
  br label %123

123:                                              ; preds = %119, %113
  br label %124

124:                                              ; preds = %123, %107
  br label %125

125:                                              ; preds = %124, %30
  %126 = load i32, i32* %11, align 4
  %127 = icmp ne i32 %126, 0
  br i1 %127, label %128, label %141

128:                                              ; preds = %125
  %129 = load %struct.SN_env*, %struct.SN_env** %8, align 8
  %130 = getelementptr inbounds %struct.SN_env, %struct.SN_env* %129, i32 0, i32 2
  %131 = load i32*, i32** %130, align 8
  %132 = load i32, i32* %9, align 4
  %133 = sext i32 %132 to i64
  %134 = getelementptr inbounds i32, i32* %131, i64 %133
  %135 = load i32*, i32** %12, align 8
  %136 = load i32, i32* %11, align 4
  %137 = sext i32 %136 to i64
  %138 = mul i64 %137, 4
  %139 = trunc i64 %138 to i32
  %140 = call i32 @memmove(i32* %134, i32* %135, i32 %139)
  br label %141

141:                                              ; preds = %128, %125
  %142 = load i32*, i32** %13, align 8
  %143 = icmp ne i32* %142, null
  br i1 %143, label %144, label %147

144:                                              ; preds = %141
  %145 = load i32, i32* %14, align 4
  %146 = load i32*, i32** %13, align 8
  store i32 %145, i32* %146, align 4
  br label %147

147:                                              ; preds = %144, %141
  store i32 0, i32* %7, align 4
  br label %148

148:                                              ; preds = %147, %65, %28
  %149 = load i32, i32* %7, align 4
  ret i32 %149
}

declare dso_local i32* @create_s(...) #1

declare dso_local i32 @SIZE(i32*) #1

declare dso_local i32 @CAPACITY(i32*) #1

declare dso_local i32* @increase_size(i32*, i32) #1

declare dso_local i32 @memmove(i32*, i32*, i32) #1

declare dso_local i32 @SET_SIZE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
